# moving_heat_source

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  python_requirements.txt  readme.md  setup.py
MovingHeatSource/: __init__.py
MovingHeatSource/adaptiveStepper/: __init__.py
MovingHeatSource/gcode/: __init__.py
cpp/: FEMFunction.cpp  FEMFunction.h  Function.cpp  Function.h  HeatSource.cpp  HeatSource.h  LumpedHeatSource.h  Material.h  MovingHeatSource.cpp  Printer.h  Problem.cpp  Problem.h  assemble.cpp  computePulse.cpp  heatSource.h  heatSources.cpp  initialize.cpp  initializeIntegrator.cpp  initializeProblem.cpp  iterate.cpp  postIterate.cpp  problem.cpp  problem.h  solve.cpp  timeIntegrator.h  updateFRF_positions.cpp
cpp/additiveManufacturing/: Hatch.h  Printer.h
cpp/assembly/: Form.h  assembleBoundary.cpp  assembleConvection.cpp  assembleDomain.cpp  assembleGamma.cpp  assembleMassMatrix.cpp  assembleNeumann.cpp  assembleSpatialLHS.cpp  assembleSpatialPDE.cpp  assembleSpatialRHS.cpp  assembleStabilization.cpp  assembleTime.cpp  assembleWeakBcs.cpp  computeMassMatrix.cpp  forceDirichletNodes.cpp  forceDofs.cpp  forceInactiveNodes.cpp  updateForcedDofs.cpp
cpp/heatSource/: HeatSource.cpp  HeatSource.h  LumpedHeatSource.cpp  LumpedHeatSource.h  Path.h
cpp/linearAlgebra/: LinearSystem.cpp  LinearSystem.h  MATLAB.cpp  MATLAB.h  Solver.cpp  Solver.h
cpp/mesh/: AABB.h  ActiveMesh.cpp  ActiveMesh.h  Boundary.h  Connectivity.cpp  Connectivity.h  Domain.cpp  Domain.h  Element.cpp  Element.h  ElementTypes.cpp  ElementTypes.h  Mesh.cpp  Mesh.h  MeshTag.cpp  MeshTag.h  MeshTagImpl.h  RefElement.cpp  RefElement.h  Submesh.cpp  Submesh.h  cgal_interface.cpp  cgal_interface.h  connectivity.cpp  connectivity.h  elementTypes.cpp  elementTypes.h  generate1DMesh.cpp  initializeMesh.cpp
examples/1d_2Halves_ndCoupling/: input.yaml
examples/1d_adaptiveTsteppingTest/: CustomStepper.py  input.yaml
examples/1d_ded/: CustomStepper.py  input.yaml  main.py  readme.md
examples/1d_diffusion_neumann_dirichlet/: input.yaml  main.py  (+1 more)
paper/: to_read.txt
run/: .gitignore  fedRun.py  input.txt  myPlotHandler.py  normalRun.py  plotSourceTerm.py  prepos.py  readInput.py  readWriteSolution.py  run.py  testBDF3.txt  testNels.py  wrapper.py
src/: MovingHeatSource.cpp  assemble.cpp  computePulse.cpp  compute_pulse.cpp  element.h  heatSource.h  initialize.cpp  initializeIntegrator.cpp  iterate.cpp  line.h  main.cpp  mesh.h  minimal.cpp  postIterate.cpp  preIterate.cpp  problem.h  readInput.cpp  test_matplotlib.cpp  timeIntegrator.h  updateFRF_positions.cpp
tests/: .gitignore  CMakeLists.txt  wrapper.py
(+387 files in other folders)
